--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,12 @@
   }
 
   .particle {
-    @apply absolute w-[3px] h-[3px] bg-[var(--accent)] rounded-full opacity-0;
+    position: absolute;
+    width: 3px;
+    height: 3px;
+    background-color: var(--accent);
+    border-radius: 50%;
+    opacity: 0;
     animation: float 15s infinite ease-in-out;
   }
 
